# D-SCRIPT

./: .gitignore  README.md  pyproject.toml  sweep.yaml
bash/: predict_bernett_cmap.sh  sweep.tsv  test.sh  test_bernett.sh  test_human.sh  train.sh  train_aug.sh  train_batch.sh  train_diex.sh  train_ex.sh  train_human.sh  train_n.sh  train_noise.sh  train_ns.sh  train_q.sh  train_q1.sh  train_q2.sh  train_sweep.sh
bash_files/: train.sh
docs/source/: data.rst
dscript/: foldseek.py  glider.py  language_model.py  loading.py  parallel_embedding_loader.py
dscript/commands/: embed.py  evaluate.py  evaluate_n.py  evaluate_q.py  predict_bipartite.py  predict_block.py  predict_serial.py  train.py  train_ex.py  train_n.py  train_noise.py  train_ns.py  train_proto.py  train_q.py  train_q1.py  train_q2.py
dscript/models/: embedding.py  interaction.py  interaction_ex.py  interaction_n.py  interaction_noise.py  interaction_ns.py  interaction_q.py  interaction_q1.py  interaction_q2py
dscript/tests/: test_commands.py  test_models_interaction.py  test_pretrained.py
logs/: 43066795_bernett_train_4294967294.err  43066795_bernett_train_4294967294.out  43066816_bernett_train_4294967294.err  43066816_bernett_train_4294967294.out  43066850_bernett_train_4294967294.err  43066850_bernett_train_4294967294.out  43066886_bernett_train_4294967294.err  43066886_bernett_train_4294967294.out
new_bash/: env.sh  train_bernett.sh  train_human.sh
scripts/bmpi_bench/: sample_pairs.py  select_dmel_seqs.py  select_endo_seqs.py
